--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-application",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9999/",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
